<resources>
    <string name="app_name">MovieMe</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear Movies</string>
    <string name="action_clear_alert">All movies will be deleted</string>
    <string name="clear_btn">Clear</string>
    <string name="cancel_btn">Cancel</string>
    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="action_watched">Mark as watched</string>
    <string name="action_unwatch">Unwatch</string>
    <string name="action_delete">Delete</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_btn">Save</string>
    <string name="ok_btn">OK</string>
    <string name="add_btn">Add</string>
    <string name="rate_dialog_title">Rate this movie</string>
    <string name="delete_movie_title">Delete Movie</string>
    <string name="delete_movie_content">Movie will be deleted</string>
    <string name="search_btn">Search</string>

    <string name="credits">"App made by Eitan Aflalo\n\nMovie credits:\nhttp://www.omdbapi.com\nhttps://www.themoviedb.org"</string>

    <!--Add Movie Activity-->
    <string name="no_internet">No Internet Connection!</string>
    <string name="enter_movie">Please enter a movie name</string>
    <string name="short_name">Movie title is too short</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_director">Director</string>
    <string name="movie_actors">Actors</string>
    <string name="movie_lang">Language</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_plot">Plot</string>
    <string name="movie_not_found">Movie not found!</string>
    <string name="movie_already_exists">Movie already exists</string>

    <!--Edit Movie Activity-->
    <string name="edit_activity_title">Edit Movie</string>
    <string name="change_poster">Change Poster</string>
    <string name="select_picture">Select Picture</string>
    <string name="enter_url_hint">Enter a URL</string>
    <string name="enter_url_error">URL is not valid</string>
    <string-array name="poster_items">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Enter URL</item>
        <item>Cancel</item>
    </string-array>

    <!--Main Activity-->
    <string name="fab_manual">Add Movie Manually</string>
    <string name="fab_auto">Add Movie</string>
    <string name="no_movies">"No movies at library yet.\nClick '+' to add a movie."</string>

    <!--Settings Activity-->
    <string name="pref_header_general">General</string>
    <string name="pref_header_style">Style</string>
    <string name="items_per_row">Movies per row</string>
    <string name="sortway">Sort by</string>
    <string name="night_theme">Night theme</string>

    <string-array name="pref_item_per_row">
        <item>One movie</item>
        <item>Two movies</item>
        <item>Three movies</item>
        <item>Four movies</item>
    </string-array>

    <string-array name="pref_item_per_row_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_sortway">
        <item>Newest to oldest</item>
        <item>\"Watched\" first</item>
        <item>Highest rate to lowest</item>
    </string-array>

    <string-array name="pref_sortway_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--View Movie Activity-->
    <string name="view_activity_title">Movie Details</string>
    <string name="imdb_rate">"IMDb rate: "</string>
    <string name="imdb_director">"Director: "</string>
    <string name="imdb_actors">"Actors: "</string>
    <string name="imdb_no_plot">No Plot</string>
    <string name="share_text">"You have got to watch "</string>
    <string name="imdb_none">None</string>
    <string name="movie_not_watched">Not Watched</string>
    <string name="movie_not_rated">Not Rated</string>

    <!--Library CV-->
    <string name="watched">Watched</string>
    <string name="title">Title</string>
</resources>
