<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aflalcom.eitan.movieslib.ViewMovieActivity">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="102"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_watched"
        android:orderInCategory="103"
        android:title="@string/action_watched"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="104"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
